# dash-devtools

./: .gitignore  README.md  ghg.html  pyproject.toml
dash_devtools/: __init__.py  __main__.py  ai_engine.py  cli.py  database.py  dbdiagram.py  e2e.py  health.py  init_test.py  markdown_report.py  perf.py  report.py  stats.py  test_suite.py  testing.py  watch.py  word_report.py
dash_devtools/fixers/: __init__.py  migration_fixer.py  ux_fixer.py  version_bumper.py
dash_devtools/generators/: __init__.py
dash_devtools/hooks/: __init__.py  pre_commit.py  pre_push.py
dash_devtools/migrators/: __init__.py  shoelace_to_daisyui.py
dash_devtools/reporters/: __init__.py
dash_devtools/validators/: __init__.py  code_quality.py  detector.py  migration.py  performance.py  security.py
dash_devtools/validators/backend/: __init__.py  nodejs.py  python.py
dash_devtools/validators/common/: __init__.py  quality.py  security.py
dash_devtools/validators/frontend/: __init__.py  angular.py  gas.py  vite.py
dash_devtools/vision/: __init__.py
reports/: report_20251221_152905.html
scripts/: screenshot.js
templates/: deploy-netlify.yml  ios-theme.css
