[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-devtools"
version = "1.0.0"
description = "大許開發工具集 DashAI DevTools - 驗證、遷移、文件產生工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DashAI", email = "dev@dashai.dev"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]
vision = [
    "opencv-python>=4.8",
    "pillow>=10.0",
    "numpy>=1.24",
]
ai = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]
all = [
    "dash-devtools[dev,vision,ai]",
]

[project.scripts]
dash = "dash_devtools.cli:main"

[project.urls]
Homepage = "https://github.com/seikaikyo/dash-devtools"
Repository = "https://github.com/seikaikyo/dash-devtools"

[tool.setuptools.packages.find]
where = ["."]
include = ["dash_devtools*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
